# computer-use-win

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_stdin.rs  test_apps.py  test_final.py  test_mcp_compat.py  test_newline.py  test_protocol.py  test_screenshot.py  test_stdin.py
src/: apps.rs  debug_server.rs  input.rs  main.rs  mcp.rs  screenshot.rs  uia.rs
